communicate project end

--- a/info/index.html
+++ b/info/index.html
@@ -24,10 +24,11 @@ hide_hero: true
             Im Rahmen der Förderung wurden verschiedene Materialien, Workshop- und Aktionsformate entwickelt. Der Fokus der Formate liegt auf der emanzipierenden Auseinandersetzung mit analogen sowie digitalen Tools und gesellschaftlichen Themen. Das Ziel ist die Vermittlung von Kompetenzen, Technologie nicht nur zu konsumieren, sondern vor allem für die positive Gestaltung von Gesellschaft einzusetzen.
           </p>
           <p>
-
             Die Workshop- und Aktionsformate wurden mit Jugendlichen im Alter von 12 bis 21 Jahren sowie Multiplikator*innen aus der Jugendarbeit durchgeführt. Die Materialien sind über eine entwickelte Selbstlernplattform für Aktive in der Jugendarbeit und Jugendliche nutzbar. Bei der Umsetzung der verschiedenen Maßnahmen wurde eng mit außerschulischen Jugendeinrichtungen und überregionalen Bildungsverbänden und Initiativen zusammengearbeitet – deutschlandweit.
           </p>
-
+          <p> 
+            Bei Rückfragen erreicht ihr uns weiterhin unter folgender E-Mailadresse: info[at]okfn.de
+          </p>
         
         </div>
       </div>
