--- a/workshops/index.html
+++ b/workshops/index.html
@@ -9,7 +9,7 @@ hide_hero: true
       <div class="col-lg-10 col-lg-offset-1 section-workshop">
         <h2 class="section-headline">Workshops für Jugendliche</h2>
         <p>
-          In unseren Workshops könnt ihr eigene Nachrichtenredaktionen gründen, lernen wie  man den öffentlichen Raum positiv einnimmt oder Cybertrolle mit Argumenten besiegt. Die Workshops sind dokumentiert, stehen unter einer freien Lizenz und können nachgenutzt werden.
+          In unseren Workshops können Jugendliche eigene Nachrichtenredaktionen gründen, lernen wie  man den öffentlichen Raum positiv einnimmt oder Cybertrolle mit Argumenten besiegt. Die Workshops sind dokumentiert, stehen unter einer freien Lizenz und können nachgenutzt werden. Unsere Materialen können bei Bedarf <a class="text__blue" href="mailto:lea@okfn.de, lydia.boettcher@okfn.de"> ausgeliehen werden</a>. 
         </p>
       </div>
     </div>
