delete team members

--- a/team/index.html
+++ b/team/index.html
@@ -12,87 +12,7 @@ hide_hero: true
   <div class="container text__black">
     <h1 class="text-center section-headline">&Uuml;ber uns</h1>
     <div class="col-lg-8 col-lg-offset-2 title">
-      <p>Die <a href="https://okfn.de">Open Knowledge Foundation Deutschland</a> ist seit der Gr&uuml;ndung 2011 ein Vorreiter und Impulsgeber im digitalen zivilgesellschaftlichen Engagement. Mit den Demokratielaboren haben wir ein Projekt ins Leben gerufen, das an der Grundidee des preisgekrönten OKF-Förderprogramms <a class="highlight-grey" href="https://jugendhackt.de">Jugend hackt</a> ansetzt: Jugendliche verschiedener Gesellschaftsgruppen zum Einsatz ihrer technischen Fähigkeiten f&uuml;r die Demokratie begeistern!</p>
-    </div>
-  </div>
-  <div class="col-xs-12">
-    <div class="container text__black">
-      <h1 class="text-center section-headline">Und das sind wir</h1>
-    </div>
-    <div class="row">
-      <div class="members col-xs-12 col-sm-6 col-md-4 col-lg-3">
-        <a class="members-image-wrap" href="mailto:lydia.boettcher@okfn.de"><img class="img-circle member-avatar" alt="Lydia Böttcher" src="/img/avatars/lydia.jpg"></a>
-        <p class="text-center">
-          <a class="text__blue" href="mailto:lydia.boettcher@okfn.de">Lydia Böttcher</a>
-          <br>Projektleiterin Demokratielabore
-        </p>
-      </div>
-      <div class="members col-xs-12 col-sm-6 col-md-4 col-lg-3">
-        <a class="members-image-wrap" href="mailto:matthias.loewe@okfn.de"><img class="img-circle member-avatar" alt="Matthias Löwe" src="/img/avatars/matthias.jpg"></a>
-        <p class="text-center">
-          <a class="text__blue" href="mailto:matthias.loewe@okfn.de">Matthias Löwe</a>
-          <br>Projektmanager Workshops
-        </p>
-      </div>
-      <div class="members col-xs-12 col-sm-6 col-md-4 col-lg-3">
-        <a class="members-image-wrap" href="mailto:maximilian.voigt@okfn.de"><img class="img-circle member-avatar" alt="Maximilian Voigt" src="/img/avatars/max.jpg"></a>
-        <p class="text-center">
-          <a class="text__blue" href="mailto:maximilian.voigt@okfn.de">Maximilian Voigt</a>
-          <br> Projektmanager Digital-AGs & Materialplattform
-        </p>
-      </div>
-      <div class="members col-xs-12 col-sm-6 col-md-4 col-lg-3">
-        <a class="members-image-wrap" href="mailto:jasmin.helm@okfn.de"><img class="img-circle member-avatar" alt="Jasmin Helm" src="/img/avatars/jasmin.jpg"></a>
-        <p class="text-center">
-          <a class="text__blue" href="mailto:jasmin.helm@okfn.de">Jasmin Helm</a> 
-          <br> Projektmanagerin Kommunikation
-        </p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="members col-xs-12 col-sm-6 col-md-4 col-lg-3">
-        <a class="members-image-wrap" href="mailto:paula.gruenwald@okfn.de"><img class="img-circle member-avatar" alt="Paula Grünwald" src="/img/avatars/paula.jpg"></a>
-        <p class="text-center">
-          <a class="text__blue" href="mailto:paula.gruenwald@okfn.de">Paula Grünwald (geb. Glaser)</a> 
-          <br>Projektkoordinatorin
-        </p>
-      </div>
-      <div class="members col-xs-12 col-sm-6 col-md-4 col-lg-3">
-        <a class="members-image-wrap" href="mailto:juliane.krueger@okfn.de"><img class="img-circle member-avatar" alt="Juliane Krueger" src="/img/avatars/juliane2.jpg"></a>
-        <p class="text-center">
-          <a class="text__blue" href="mailto:juliane.krueger@okfn.de">Juliane Kr&uuml;ger</a>
-          <br>Projektmanagerin Organisation
-        </p>
-      </div>
-      <div class="members col-xs-12 col-sm-6 col-md-4 col-lg-3">
-        <a class="members-image-wrap" href="mailto:sonja.fischbauer@okfn.de"><img class="img-circle member-avatar" alt="Sonja Fischbauer" src="/img/avatars/sonja.jpg"></a>
-        <p class="text-center">
-          <a class="text__blue" href="mailto:sonja.fischbauer@okfn.de">Sonja Fischbauer</a>
-          <br>Projektmanagerin
-        </p>
-      </div>
-      <div class="members col-xs-12 col-sm-6 col-md-4 col-lg-3">
-        <a class="members-image-wrap" href="mailto:nadine.stammen@okfn.de"><img class="img-circle member-avatar" alt="Nadine Stammen" src="/img/avatars/nadine.jpg"></a>
-        <p class="text-center">
-          <a class="text__blue" href="mailto:nadine.stammen@okfn.de">Nadine Stammen</a><br>Designerin
-        </p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="members col-xs-12 col-sm-6 col-md-4 col-lg-3">
-        <a class="members-image-wrap" href="mailto:leonard.wolf@okfn.de"><img class="img-circle member-avatar" alt="Leonard Wolf" src="/img/avatars/leo.jpg"></a>
-        <p class="text-center">
-          <a class="text__blue"  href="mailto:leonard.wolf@okfn.de">Leonard Wolf</a>
-          <br>Studentischer Mitarbeiter
-        </p>
-      </div>  
-      <div class="members col-xs-12 col-sm-6 col-md-4 col-lg-3">
-        <a class="members-image-wrap" href="mailto:lea.pfau@okfn.de"><img class="img-circle member-avatar" alt="Lea Pfau" src="/img/avatars/lea.jpg"></a>
-        <p class="text-center">
-          <a class="text__blue"  href="mailto:lea.pfau@okfn.de">Lea Pfau</a>
-          <br>Studentische Mitarbeiterin
-        </p>
-      </div>                                                                    
+      <p>Die <a href="https://okfn.de">Open Knowledge Foundation Deutschland</a> ist seit der Gr&uuml;ndung 2011 ein Vorreiter und Impulsgeber im digitalen zivilgesellschaftlichen Engagement. Mit den Demokratielaboren haben wir ein Projekt ins Leben gerufen, das an der Grundidee des preisgekrönten OKF-Förderprogramms <a class="highlight-grey" href="https://jugendhackt.de">Jugend hackt</a> ansetzt: Jugendliche verschiedener Gesellschaftsgruppen zum Einsatz ihrer technischen Fähigkeiten f&uuml;r die Demokratie begeistern! Das Projekt Demokratielabore ist nicht mehr aktiv.</p>
     </div>
   </div>
 </div>
